<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.user.RegisterActivity">


    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:contentDescription="@string/blablaplane"
        android:src="@drawable/logo_blablaplane"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/createProfile"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.00999999" />

    <EditText
        android:id="@+id/registerFirstName"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:backgroundTint="#EDEDED"
        android:ems="14"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/blue_primary"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/registerLastName"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:backgroundTint="#EDEDED"
        android:ems="14"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/blue_primary"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerFirstName" />

    <EditText
        android:id="@+id/registerEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:backgroundTint="#EDEDED"
        android:ems="14"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/blue_primary"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPhoneNumber" />

    <EditText
        android:id="@+id/registerPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:backgroundTint="#EDEDED"
        android:ems="14"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/blue_primary"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerLastName" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:backgroundTint="#EDEDED"
        android:ems="14"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/blue_primary"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerEmailAddress" />

    <EditText
        android:id="@+id/registerRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:backgroundTint="#EDEDED"
        android:ems="14"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/blue_primary"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPassword" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/blue_primary"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerRepeatPassword">

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="45dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/blue_primary"
            android:outlineSpotShadowColor="@color/blue_primary"
            android:text="@string/inscription"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>