<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PaymentActivity">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:contentDescription="@string/blablaplane"
        android:src="@drawable/logo_blablaplane"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/selectPayment"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="#e1e1e1"
            app:cardCornerRadius="30dp">

            <Button
                android:id="@+id/paypal_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#e1e1e1"
                android:outlineSpotShadowColor="#e1e1e1"
                android:text="@string/paypal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="#e1e1e1"
            app:cardCornerRadius="30dp">

            <Button
                android:id="@+id/cb_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#e1e1e1"
                android:outlineSpotShadowColor="#e1e1e1"
                android:text="@string/cardPayment"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="#e1e1e1"
            app:cardCornerRadius="30dp">

            <Button
                android:id="@+id/apple_pay_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#e1e1e1"
                android:outlineSpotShadowColor="#e1e1e1"
                android:text="@string/apple_pay"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="#e1e1e1"
            app:cardCornerRadius="30dp">

            <Button
                android:id="@+id/google_pay_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#e1e1e1"
                android:outlineSpotShadowColor="#e1e1e1"
                android:text="@string/google_pay"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>